<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.centit.framework</groupId>
        <version>JDK21-SNAPSHOT</version>
        <artifactId>centit-framework-dependencies</artifactId>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.centit.support</groupId>
    <artifactId>centit-commons</artifactId>
    <version>JDK21-SNAPSHOT</version>
    <name>com.centit.support:centit-commons</name>
    <packaging>pom</packaging>
    <description>java 常用工具类,作为 apache-commons的补充</description>
    <url>https://github.com/ndxt/centit-commons</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <jdk.version>17</jdk.version>
    </properties>

    <organization>
        <name>江苏南大先腾信息产业股份有限公司</name>
        <url>www.centit.com</url>
    </organization>
     <developers>
        <developer>
            <name>杨淮生</name>
            <email>codefan@sina.com</email>
            <organization>centit.com</organization>
            <organizationUrl>http://www.centit.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>
            scm:git:https://github.com/ndxt/centit-commons.git
        </connection>
        <developerConnection>
            scm:git:https://github.com/ndxt/centit-commons.git
        </developerConnection>
        <url>https://github.com/ndxt/centit-commons</url>
        <tag>v1.12</tag>
    </scm>

    <modules>
        <module>centit-utils</module>
        <module>centit-es-client</module>
        <module>centit-office-utils</module>
        <module>centit-report-utils</module>
        <module>centit-quartz-extend</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- 打包时添加源码 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

           <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
            <!-- GPG自动签名的插件-->
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->
            <!--sonatype release :
               mvn nexus-staging:release-->
            <!--<plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>-->
        </plugins>
    </build>
</project>
